--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,12 @@ h1 {
   text-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
 }
 
+@media only screen and (min-width: 3000px){
+  h1 {
+    font-size: 300px;
+  }
+}
+
 a, a:hover {
   color: #ffffff;
   text-decoration: none;
